--- a/.pypirc
+++ b/.pypirc
@@ -11,4 +11,4 @@ password: ${PYPI_TOKEN}
 [github]
 repository: https://pypi.pkg.github.com/Hariesh28
 username: Hariesh28
-password: password: ${GITHUB_TOKEN}
+password: ${GITHUB_TOKEN}
