--- a/.pypirc
+++ b/.pypirc
@@ -9,6 +9,6 @@ username: hariesh28
 password: ${PYPI_TOKEN}
 
 [github]
-repository: https://github.com/Hariesh28/AlgorithmVisualizer
+repository: https://pypi.pkg.github.com/Hariesh28/AlgorithmVisualizer
 username: Hariesh28
 password: ${GITHUB_TOKEN}
