--- a/.pypirc
+++ b/.pypirc
@@ -5,7 +5,7 @@ index-servers =
 
 [pypi]
 repository: https://upload.pypi.org/legacy/
-username: hariesh28
+username: __token__
 password: ${PYPI_TOKEN}
 
 [github]
